--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -17,9 +17,9 @@ body {
     overflow-x: hidden;
 }
 
-#root {
+/* #root {
     width: 1600px;
-}
+} */
 
 a {
     text-decoration: none;
